// MARKER START GENERAL
plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '6.1.0'
}
// MARKER END GENERAL

// MARKER START JAVA8
java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8

    compileJava.options.encoding = "UTF-8"
    compileTestJava.options.encoding = "UTF-8"
}
// MARKER END JAVA8

// MARKER START JAVA16
//java {
//    sourceCompatibility = JavaVersion.VERSION_16
//    targetCompatibility = JavaVersion.VERSION_16
//
//    compileJava.options.encoding = "UTF-8"
//    compileTestJava.options.encoding = "UTF-8"
//}
// MARKER END JAVA16

// MARKER START JAVA17
//java {
//    sourceCompatibility = JavaVersion.VERSION_17
//    targetCompatibility = JavaVersion.VERSION_17
//
//    compileJava.options.encoding = "UTF-8"
//    compileTestJava.options.encoding = "UTF-8"
//}
// MARKER END JAVA17

// MARKER START GENERAL
allprojects {
    apply plugin: 'java'
    
    group = 'nl.knokko.customitems'

    repositories {
        mavenCentral()

        maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
        maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
        maven { url = 'https://maven.enginehub.org/repo/' }
        maven { url = 'https://repo.crazycrew.us/releases' }
        maven { url = 'https://repo.citizensnpcs.co' }
        maven { url = 'https://jitpack.io' }

        mavenLocal()
        maven { url = 'https://repo.skriptlang.org/releases' }
    }

    dependencies {
        testImplementation group: 'junit', name: 'junit', version: '4.12'
    }
}
// MARKER END GENERAL

project(':shared-code') {
    dependencies {
        implementation project(':bit-helper')
        implementation 'com.github.cliftonlabs:json-simple:4.0.1'
    }
}

project(':plug-in') {
    apply plugin: 'com.github.johnrengelman.shadow'
    dependencies {
        implementation project(':shared-code')
        implementation project(':kci-nms')
        runtimeOnly project(':kci-nms12')
// MARKER START NMS DEPENDENCIES
        runtimeOnly project(':kci-nms13plus')
        runtimeOnly project(':kci-nms13')
        runtimeOnly project(':kci-nms14')
        runtimeOnly project(':kci-nms15')
        runtimeOnly project(':kci-nms16plus')
        runtimeOnly project(':kci-nms16')
// MARKER END NMS DEPENDENCIES
        compileOnly project(':bit-helper')
        compileOnly 'org.bukkit:bukkit:1.12.2-R0.1-SNAPSHOT'
        compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.0'
        compileOnly 'ru.endlesscode.mimic:mimic-bukkit-api:0.7.1'
        compileOnly 'com.github.jojodmo:ItemBridge:master-SNAPSHOT'
        compileOnly 'com.github.SkriptLang:Skript:2.6'
        compileOnly 'com.denizenscript:denizen:1.2.5-SNAPSHOT'

        testImplementation project(':bit-helper')
        testImplementation 'org.bukkit:bukkit:1.12.2-R0.1-SNAPSHOT'
    }
}

project(':editor') {
    apply plugin: 'com.github.johnrengelman.shadow'
    dependencies {
        implementation project(':shared-code')
        implementation project(':bit-helper')
        implementation project(':gui')
        implementation 'com.github.cliftonlabs:json-simple:4.0.1'

        implementation platform("org.lwjgl:lwjgl-bom:3.3.1")
        implementation "org.lwjgl:lwjgl"
        implementation "org.lwjgl:lwjgl-nfd"

        runtimeOnly "org.lwjgl:lwjgl::natives-linux"
        runtimeOnly "org.lwjgl:lwjgl-nfd::natives-linux"
        runtimeOnly "org.lwjgl:lwjgl::natives-linux-arm32"
        runtimeOnly "org.lwjgl:lwjgl-nfd::natives-linux-arm32"
        runtimeOnly "org.lwjgl:lwjgl::natives-linux-arm64"
        runtimeOnly "org.lwjgl:lwjgl-nfd::natives-linux-arm64"

        runtimeOnly "org.lwjgl:lwjgl::natives-macos"
        runtimeOnly "org.lwjgl:lwjgl-nfd::natives-macos"
        runtimeOnly "org.lwjgl:lwjgl::natives-macos-arm64"
        runtimeOnly "org.lwjgl:lwjgl-nfd::natives-macos-arm64"

        runtimeOnly "org.lwjgl:lwjgl::natives-windows"
        runtimeOnly "org.lwjgl:lwjgl-nfd::natives-windows"
        runtimeOnly "org.lwjgl:lwjgl::natives-windows-x86"
        runtimeOnly "org.lwjgl:lwjgl-nfd::natives-windows-x86"
        runtimeOnly "org.lwjgl:lwjgl::natives-windows-arm64"
        runtimeOnly "org.lwjgl:lwjgl-nfd::natives-windows-arm64"
    }
    shadowJar {
        manifest {
            attributes ('Main-Class': 'nl.knokko.customitems.editor.Editor')
        }
    }
}

// MARKER START CE EVENT HANDLER
//project(':ce-event-handler') {
//    dependencies {
//        //compileOnly project(':plug-in') // Uncomment this line in development
//        //compileOnly project(':shared-code') // Uncomment this line in development
//        compileOnly files('../CustomItems.jar') // Comment this line out in development
//        compileOnly 'com.badbones69.crazyenchantments:crazyenchantments-api:1.9.9.2'
//        compileOnly 'org.spigotmc:spigot:1.19.4-R0.1-SNAPSHOT'
//    }
//}
// MARKER END CE EVENT HANDLER

// MARKER START GENERAL
project(':kci-nms') {
    dependencies {
        compileOnly 'org.bukkit:bukkit:1.12.2-R0.1-SNAPSHOT'
    }
}
// MARKER END GENERAL

project(':kci-nms12') {
    dependencies {
        compileOnly project(':kci-nms')
        compileOnly 'org.bukkit:craftbukkit:1.12.2-R0.1-SNAPSHOT'
    }
}

// MARKER START NMS13PLUS
project(':kci-nms13plus') {
    dependencies {
        compileOnly project(':kci-nms')
        compileOnly 'org.bukkit:bukkit:1.13.2-R0.1-SNAPSHOT'
    }
}
// MARKER END NMS13PLUS

// MARKER START NMS13
project(':kci-nms13') {
    dependencies {
        compileOnly project(':kci-nms')
        compileOnly project(':kci-nms13plus')
        compileOnly 'org.bukkit:craftbukkit:1.13.2-R0.1-SNAPSHOT'
    }
}
// MARKER END NMS13

// MARKER START NMS14
project(':kci-nms14') {
    dependencies {
        compileOnly project(':kci-nms')
        compileOnly project(':kci-nms13plus')
        compileOnly 'org.bukkit:craftbukkit:1.14.4-R0.1-SNAPSHOT'
    }
}
// MARKER END NMS14

// MARKER START NMS15
project(':kci-nms15') {
    dependencies {
        compileOnly project(':kci-nms')
        compileOnly project(':kci-nms13plus')
        compileOnly 'org.spigotmc:spigot:1.15.2-R0.1-SNAPSHOT'
    }
}
// MARKER END NMS15

// MARKER START NMS16PLUS
project(':kci-nms16plus') {
    dependencies {
        compileOnly project(':kci-nms')
        compileOnly project(':kci-nms13plus')
        compileOnly 'org.spigotmc:spigot:1.16.5-R0.1-SNAPSHOT'
    }
}
// MARKER END NMS16PLUS

// MARKER START NMS16
project(':kci-nms16') {
    dependencies {
        compileOnly project(':kci-nms')
        compileOnly project(':kci-nms13plus')
        compileOnly project(':kci-nms16plus')
        compileOnly 'org.spigotmc:spigot:1.16.5-R0.1-SNAPSHOT'
    }
}
// MARKER END NMS16

// MARKER START NMS17PLUS
//project(':kci-nms16plus') {
//    dependencies {
//        compileOnly project(':kci-nms')
//        compileOnly project(':kci-nms13plus')
//        compileOnly 'org.spigotmc:spigot:1.17.1-R0.1-SNAPSHOT'
//    }
//}
// MARKER END NMS17PLUS

// MARKER START NMS17
//project(':kci-nms17') {
//    dependencies {
//        compileOnly project(':kci-nms')
//        compileOnly project(':kci-nms13plus')
//        compileOnly project(':kci-nms16plus')
//        compileOnly 'org.spigotmc:spigot:1.17.1-R0.1-SNAPSHOT'
//    }
//}
// MARKER END NMS17

// MARKER START NMS18PLUS
//project(':kci-nms16plus') {
//    dependencies {
//        compileOnly project(':kci-nms')
//        compileOnly project(':kci-nms13plus')
//        compileOnly 'org.spigotmc:spigot:1.18.2-R0.1-SNAPSHOT'
//    }
//}
// MARKER END NMS18PLUS

// MARKER START NMS18
//project(':kci-nms18') {
//    dependencies {
//        compileOnly project(':kci-nms')
//        compileOnly project(':kci-nms13plus')
//        compileOnly project(':kci-nms16plus')
//        compileOnly 'org.spigotmc:spigot:1.18.2-R0.1-SNAPSHOT'
//    }
//}
// MARKER END NMS18

// MARKER START NMS19
//project(':kci-nms19') {
//    dependencies {
//        compileOnly project(':kci-nms')
//        compileOnly project(':kci-nms13plus')
//        compileOnly project(':kci-nms16plus')
//        compileOnly 'org.spigotmc:spigot:1.19.4-R0.1-SNAPSHOT'
//    }
//}
// MARKER END NMS19

// MARKER START NMS20
//project(':kci-nms20') {
//    dependencies {
//        compileOnly project(':kci-nms')
//        compileOnly project(':kci-nms13plus')
//        compileOnly project(':kci-nms16plus')
//        compileOnly 'org.spigotmc:spigot:1.20.1-R0.1-SNAPSHOT'
//    }
//}
// MARKER END NMS20